<!--
  ~ Copyright © 2019 - 2024  Kynetics, Inc.
  ~ SPDX-License-Identifier: Apache-2.0
  -->

<resources>
    <string name="app_name">CAN Handler</string>
    <string name="app_title">Kynetics CAN Handler Application</string>
    <string name="tab_text_1">Sender</string>
    <string name="tab_text_2">Receiver</string>
    <string name="configuration">configuration</string>
    <string name="loopback">loopback</string>
    <string name="receive_own_msgs">receive own msgs</string>
    <string name="bind_interface">Bind Socket Raw</string>
    <string name="socket_raw">socket raw</string>
    <string name="unbind">UNBIND</string>
    <string name="bind">BIND</string>
    <string name="frame">Send frame</string>
    <string name="id">ID:</string>
    <string name="data">DATA:</string>
    <string name="rtr">RTR</string>
    <string name="error">Error</string>
    <string name="data_acquisition">data acquisition</string>
    <string name="selected_interface">Selected Can Interface:</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="press_start_acquisition">Press START to begin acquisition</string>
    <string name="data_">Data</string>
    <string name="no_can_interfaces_found">No can interfaces found</string>
    <string name="insufficient_permissions_on_this_device">insufficient permissions on this device</string>
    <string name="menu_about">About</string>
    <string name="about_text">CAN socket Android SDK extension example application \n\n
        This application serves as a reference implementation of Kynetics\' CAN socket Android SDK Extension library. \n\n

        To learn more about SDK Extension licensing please visit:\n
        <a href="https://www.kynetics.com/android-sdk-extensions">https://www.kynetics.com/android-sdk-extensions</a>\n\n

        Application source code is available under Apache v2.0 licence at:\n
        <a href="https://github.com/Kynetics/android-can-example-app">https://github.com/Kynetics/android-can-example-app</a>\n\n

    </string>
    <string name="about_copyright">Copyright © 2019 – 2024  Kynetics, Inc.</string>
    <string name="menu_restart">restart</string>
</resources>
