<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright © 2019 - 2025  Kynetics, Inc.
  ~ SPDX-License-Identifier: Apache-2.0
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimaryDark"
            app:title="@string/app_title" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardview_row1_col1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="5dp"
                    app:contentPadding="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView_configTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="5dp"
                            android:text="@string/configuration"
                            android:textAllCaps="true"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView_selectedInterface"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/selected_interface" />

                            <TextView
                                android:id="@+id/can_interface_selected"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:textStyle="bold"
                                tools:text="can0" />
                        </LinearLayout>

                        <Switch
                            android:id="@+id/switch_bind"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/bind_interface"
                            android:textAllCaps="true"
                            android:textStyle="bold" />

                        <Switch
                            android:id="@+id/checkBox_configLoopback"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:text="@string/loopback"
                            android:textAllCaps="true" />

                        <Switch
                            android:id="@+id/checkBox_configRcvOwnMsg"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/receive_own_msgs"
                            android:textAllCaps="true" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardview_row2_col1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="5dp"
                    app:contentPadding="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <TextView
                            android:id="@+id/textView_sendTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="5dp"
                            android:text="@string/frame"
                            android:textAllCaps="true"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                        <RadioGroup
                            android:id="@+id/radioGroup_frameType"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/radioButton_dataFrame"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:checked="true"
                                android:text="@string/data_" />

                            <RadioButton
                                android:id="@+id/radioButton_rtrFrame"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/rtr" />

                            <RadioButton
                                android:id="@+id/radioButton_errFrame"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/error" />
                        </RadioGroup>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/id">

                            <EditText
                                android:id="@+id/editText_frameId"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:ems="10"
                                android:inputType="numberDecimal"
                                android:maxLength="4" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/data">

                            <EditText
                                android:id="@+id/editText_frameData"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:ems="10"
                                android:gravity="start|top"
                                android:inputType="textMultiLine"
                                android:maxLength="8" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </TableRow>

            <TableRow>


                <androidx.cardview.widget.CardView
                    android:id="@+id/cardview_receive_msgs"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="5dp"
                    app:contentPadding="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView_receiveTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="5dp"
                            android:text="can messages"
                            android:textAllCaps="true"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                        <Switch
                            android:id="@+id/switch_data_acquisition"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/data_acquisition"
                            android:textAllCaps="true" />

                        <ProgressBar
                            android:id="@+id/progressBar_acquisition"
                            style="?android:attr/progressBarStyleHorizontal"
                            android:layout_width="match_parent"
                            android:layout_height="20dp"
                            android:indeterminateOnly="true"
                            android:visibility="gone" />

                        <TextView
                            android:id="@+id/textView_canMessages"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:isScrollContainer="true"
                            android:maxLines="100"
                            android:minHeight="50dp"
                            android:scrollbars="vertical"
                            android:singleLine="false"
                            android:visibility="gone"
                            tools:visibility="visible" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </TableRow>
        </TableLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSend"
        style="@style/Widget.Design.FloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:backgroundTint="#daa592"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_dialog_email" />

</androidx.constraintlayout.widget.ConstraintLayout>